<resources>
    <string name="app_name">Mickey Assistant</string>
    <string name="create_account">Create Account</string>
    <string name="email">Enter email address</string>
    <string name="password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="or">or</string>
    <string name="sign_in">Login</string>
    <string name="update_details">Click here to update database</string>
    <string name="sign_out">Log out</string>
    <string name="update_database">Update Database</string>
    <string name="enter_the_parent_name">Enter the parent name</string>
    <string name="enter_the_child_name">Enter the child name</string>
    <string name="enter_the_new_value">Enter the new value</string>
    <string name="update">Update</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_label">Select one</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="paragraph">
        On Monday, Delhi saw its hottest September day in at least 14 years. The maximum temperature on Monday was 40.1 degrees Celsius, six degrees above the normal for this time of the year. This is also the highest maximum temperature recorded in September from at least 2009 onwards, data from the India Meteorological Department (IMD) shows. The maximum temperature in September has not hit 40 degrees Celsius in Delhi from 2009 onwards at least, having stood only at a little above 38 degrees Celsius at its highest in the past 14 years. This was 38.2 degrees in September 2019 at the Safdarjung weather station.
        On Monday, Delhi saw its hottest September day in at least 14 years. The maximum temperature on Monday was 40.1 degrees Celsius, six degrees above the normal for this time of the year. This is also the highest maximum temperature recorded in September from at least 2009 onwards, data from the India Meteorological Department (IMD) shows. The maximum temperature in September has not hit 40 degrees Celsius in Delhi from 2009 onwards at least, having stood only at a little above 38 degrees Celsius at its highest in the past 14 years. This was 38.2 degrees in September 2019 at the Safdarjung weather station.
        On Monday, Delhi saw its hottest September day in at least 14 years. The maximum temperature on Monday was 40.1 degrees Celsius, six degrees above the normal for this time of the year. This is also the highest maximum temperature recorded in September from at least 2009 onwards, data from the India Meteorological Department (IMD) shows. The maximum temperature in September has not hit 40 degrees Celsius in Delhi from 2009 onwards at least, having stood only at a little above 38 degrees Celsius at its highest in the past 14 years. This was 38.2 degrees in September 2019 at the Safdarjung weather station.
        On Monday, Delhi saw its hottest September day in at least 14 years. The maximum temperature on Monday was 40.1 degrees Celsius, six degrees above the normal for this time of the year. This is also the highest maximum temperature recorded in September from at least 2009 onwards, data from the India Meteorological Department (IMD) shows. The maximum temperature in September has not hit 40 degrees Celsius in Delhi from 2009 onwards at least, having stood only at a little above 38 degrees Celsius at its highest in the past 14 years. This was 38.2 degrees in September 2019 at the Safdarjung weather station.
        On Monday, Delhi saw its hottest September day in at least 14 years. The maximum temperature on Monday was 40.1 degrees Celsius, six degrees above the normal for this time of the year. This is also the highest maximum temperature recorded in September from at least 2009 onwards, data from the India Meteorological Department (IMD) shows. The maximum temperature in September has not hit 40 degrees Celsius in Delhi from 2009 onwards at least, having stood only at a little above 38 degrees Celsius at its highest in the past 14 years. This was 38.2 degrees in September 2019 at the Safdarjung weather station.
        On Monday, Delhi saw its hottest September day in at least 14 years. The maximum temperature on Monday was 40.1 degrees Celsius, six degrees above the normal for this time of the year. This is also the highest maximum temperature recorded in September from at least 2009 onwards, data from the India Meteorological Department (IMD) shows. The maximum temperature in September has not hit 40 degrees Celsius in Delhi from 2009 onwards at least, having stood only at a little above 38 degrees Celsius at its highest in the past 14 years. This was 38.2 degrees in September 2019 at the Safdarjung weather station.
        On Monday, Delhi saw its hottest September day in at least 14 years. The maximum temperature on Monday was 40.1 degrees Celsius, six degrees above the normal for this time of the year. This is also the highest maximum temperature recorded in September from at least 2009 onwards, data from the India Meteorological Department (IMD) shows. The maximum temperature in September has not hit 40 degrees Celsius in Delhi from 2009 onwards at least, having stood only at a little above 38 degrees Celsius at its highest in the past 14 years. This was 38.2 degrees in September 2019 at the Safdarjung weather station.
    </string>
</resources>